CSS/style.css
body {
    font-family: 'Raleway', sans-serif;
    width: auto;
    border: 0;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    flex: 2 2 100%;
  
}

header {
    padding: 0;
    margin: 0;
}

#headdiv {
 box-sizing: border-box;
 display: flex;
 padding-right: 20px;
 }

.navbar {
    box-sizing: content-box;
    display:flex;
    flex-grow: 2;
}

#links {
    display:flex;
    flex-direction: row;
}

#Logo {
    max-width: fit-content;
    height: fit-content;
    padding: 10px;


}


a {
    text-decoration:none;
    color:#8b8987;
    padding: 10px;
    padding-top: 30px;
 
}

a:hover {
    color:#0065FC;
    border-width: 2px;
    border-top-style: solid;
    border-color: #0065FC;
}


/** end of head section CSS  */

/* search */
button {
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
  border-style: none;
  background-color: #0065FC;
  font-family: 'Raleway', sans-serif;
  font-weight: bold;
  color: white;
  
}


form {
    display:flex;
    border-radius: 10px;
    border-style: solid;
    border-color: #F2F2F2;
    width: fit-content;
   
}

input {
    border-style: none;
    font-weight: bold;
    color: black;
    font-family: 'Raleway', sans-serif;
    height: 50px;
    width: 350px;
}

#searchbutton {
background-color: #F2F2F2;
color: black;
border-top-left-radius: 10px;
border-bottom-left-radius: 10px;
border-bottom-right-radius: 0px;
border-top-right-radius: 0px;
display: flex;
flex-wrap: wrap;
align-content:center;
}

#searchicon {
    
    color: white;
    background-color: #0065FC;
}

#text {
   
    padding-left: 50px;
}

#searchform {
    padding-left: 50px; 
    flex-basis: 50%;
}

/* Filters */

#filters {
    display: flex;
    flex-direction: row;
}

#i1, #i2, #i3, #i4 {
    height: 30px;
    width: 30px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #DEEBFF;
    color: #0065FC;
    padding: 10px;
    border-style: hidden;
    border-radius: 50px;
}

h4 {
    display: flex;
    align-items: center;
    margin-left: 50px;
}

ul {
    list-style: none;
    font-weight: bold;
    display:flex;
    flex-direction: row;
}

li {
    display: flex;
    align-items: center;
    box-sizing: border-box;
    padding-right: 5px;
    margin: 20px;
    border-radius: 50px;
    border-color: #F2F2F2;
    border-style: solid;
}

i {
    background-color: #DEEBFF;
    color: #0065FC;
    padding: 10px;
    border-style: hidden;
    border-radius: 50px;
}

/* info */


#infoicon {
    background-color: white;
    border-style: solid ;
    border-color: #F2F2F2;
    width: 10px;
    height: 10px;
    margin-left: 50px;
    display: flex;
    flex-wrap: wrap;
    align-content: center;
}

#info {
    display: flex;
    align-items: center;
    width:fit-content;
    height: fit-content;
}

#infotxt {
    padding-left: 20px;
    padding-bottom: 20px;
}

/* accommodations */

#acom {
   
    background-color:#F2F2F2;
    border-radius: 10px;
    box-sizing: border-box;
    
    margin-left:50px;
    padding: 10px
}



#acomhead {
    font-size: large;
    padding-left: 45px;
}

#hotelcards {
    display:flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
}

.fa-star {
    background: none;
    border-radius: 0px;
    color:#0065FC;
    padding: 0px;
}

#star5, #star15, #star19, #star20, #star40, #star45 {
     color:#b6b4b4;
}

.cards {
    border-style: solid;
    border-color: white;
    border-radius: 20px;
    background-color: rgb(255, 255, 255);
    width: 30%;
    margin-bottom: 50px;
    box-shadow: 2px 2px 2px 2px #b6b4b4;
}

.hotelimg {
    display: flex;
    width: 100%;
    height: 150px;
    object-fit: cover;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}



.acominfo {
    font-size: small;
    padding-left: 20px;
    padding-bottom: 10px;
    padding-top: 0px;
    height: 60px;
   
}

h5 {
    font-size: large;
    padding-left: 45px;
}
/* most popular */

#mostpopular {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    background-color:#F2F2F2;
    border-radius: 10px;
    margin-left:50px;
    margin-right:50px;
    padding-right: 20px;
}

#starmp {
    background: none;
    border-radius: 0px;
    padding:2px;
    color: black;
}

#acomandpopdiv {
    display:flex;
    flex-direction: row;
}

.mpcards {
    border-style: solid;
    border-color: white;
    border-radius: 20px;
    background-color: rgb(255, 255, 255);
    display:flex;
    flex-direction: row;
    width: 80%;
    margin-left: 55px;
    margin-right: 50px;
    margin-bottom: 50px; 
    box-shadow: 2px 2px 2px 2px #b6b4b4;
    
    
   }

   .mpinfo {
    font-size: small;
    padding-left: 30px;

   }

   .hotelimgmp {
    height: 160px;
    width: 170px; 
    object-fit: cover;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
   }



/* Activities */


#actimg1, #actimg4 {
    width: 100%;
    height: 95%;
    object-fit:cover;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
 }
 
 #actimg5, #actimg6 {
    width: 100%;
    height: 90%;
    object-fit:cover;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
 
 }
 
 #actimg2 {
    width: 100%;
    height: 90%;
    object-fit:cover;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
 }
 
 #actimg3 {
    width: 100%;
    height: 90%;
    object-fit:cover;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
 }
 
 

#actcontainer {
    display: flex;
    flex-direction: column;
    
}


#actcardscontainer {
    display: grid;
    margin-left: 50px;
    
    
}

#act1, #act2, #act3, #act4, #act5, #act6 {
    border-radius: 20px;
    box-shadow: 2px 2px 2px 2px #b6b4b4;
    margin: 20px;
    display:flex;
    flex-direction: column;
}



.txt { 
   font-weight: bold;
   margin: 0px;
   padding: 10px;
   
}

.size1 {
    
    width: 80%;
}

#act1 {
grid-row-start: 1;
grid-row-end: 3;
grid-column: 1;
}

#act2 {
grid-row: 1;
grid-column: 2;
}

#act3 {
grid-row: 2;
grid-column: 2;
}

#act4 {
grid-row: 1/3;
grid-column: 3;
}

#act5 {
grid-row: 1;
grid-column: 4;
}

#act6 {
grid-row: 2;
grid-column: 4;
}  

.foot {
    padding-left: 0px;
}


.footerdiv {
    padding: 20px; 
    margin-right: 300px;
    margin-left: 50px;
    display: flex;
    flex-direction: column;

}

footer {
    display:flex;
    flex-direction: row;
    background-color:#F2F2F2;
    margin-top: 50px;
}

/* MEDIA QUERIES SECTION */

@media (max-width: 768px) {

    /*logo and nav*/

    body {
        font-family: 'Raleway', sans-serif;
        width: auto;
        border: 0;
        margin: 0;
        padding: 0;
        display: flex;
        flex-direction:column;
        flex-shrink: 3;
    }

    #Accommodation { 
        display: flex; 
        justify-content: center;
        
    }

    #Activities {
        display: flex; 
        justify-content: center;
    }

    #logoimg {
        display: flex;
        justify-content: center;
        padding-right: 50px;
        
    }

    #headdiv {
        display: flex;
        flex-direction: column;
    }
    
  
     a:hover {
        color:#0065FC;
        border-width: 2px;
        border-bottom-style: solid;
        border-color: #0065FC;
        border-top-style: none;
    }
    /* text search and filters */ 

    #searchtxt {
        display: none;
    }

    button {
        border-top-left-radius: 10px;
        border-bottom-left-radius: 10px;
    }

   
    

    #text {
        display: flex;
        flex-direction: column;
    }

    
    #filters {
        display: flex; 
        flex-direction: column;
        flex-wrap: wrap;
    }

    ul {
        display: flex; 
        flex-direction: row;
        flex-wrap: wrap;
        max-width: 600px;
    }

    #li {
        flex-shrink: 4;
    }

    /*acom, most pop and activities */
  #acomandpopdiv {
        display: flex;
        flex-direction: column-reverse;
        flex-wrap: wrap;
       
    }

    #acom {
        display: flex;
        flex-direction: column;
        flex-wrap: wrap;
        background-color: white;
        margin: 0px;
    }

    .cards {
        display: flex;
        flex-direction: column;
        height: 300px;
        width: 90%;
        border-width: 10px;
       
    }

    #hotelcards {
        justify-content: unset;
        padding-left: 40px;
    }

    .hotelimg {
        height: 65%;
        width: 100%;
        object-fit: cover;
    }

    .acominfo {
        font-size: medium;
        font-weight: bold; 
    }

    .hotelname {
        font-size: large;
    }

  #mostpopular {
        display: flex;
        flex-direction: column;
        flex-wrap: wrap;
        flex-shrink: 4;
        margin-top: 40px;
        
    }

    .mpcards {
        display: flex;
        flex-direction: row;
        height: 300px;
        width: 100%;
        margin-bottom: 30px;
        margin-left: 0px;
        border-width: 10px;
    }


    .hotelimgmp {
        width: 50%;
        height: 100%;
        object-fit: cover;
    }

    .mpinfo {
        font-size:x-large;
    }

    h5 {
        padding-left: 0px;
        font-size: x-large;
       
    }

    #show {
        padding-left: 45px;
        font-size: large;
    }

    #actcontainer {
        display: flex;
        flex-direction: column;
       
        }

    #act1, #act2, #act3, #act4, #act5, #act6 {
        width: 90%;
        height: 300px; 
        margin-left: 0px;
      
    }

    #actimg1, #actimg2, #actimg3, #actimg4, #actimg5, #actimg6 {
        width: 100%;
        height: 80%;
    }

    #headm{
        padding-left: 50px;
    }

    #actcardscontainer {
        display: flex;
        flex-direction: column;
        
    }

    footer {
        display: flex;
        flex-direction: column;
        flex-wrap: wrap;
        padding-left: 5px;
        width: 100%;

    }
}


@media (min-width: 768px) {
    #searchicon {
        display: none; 
    }
}
/* things left to do: 

make sure images match
check tablet version 
swap side of image for most popular
ensure full screen size works. 

*/

